--- a/MediaBazaar/Properties/Resources.resx
+++ b/MediaBazaar/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="no-picture" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\no-picture.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
